fixed issues with videos not showing up in mobile devices, removed float:right from job-dates

--- a/src/components/featuredWork/featuredWork.css
+++ b/src/components/featuredWork/featuredWork.css
@@ -3,12 +3,8 @@
     padding: 35px;
     box-sizing: border-box;
     width: 450px;
-    /* cursor: pointer */
+    cursor: pointer;
 }
-
-/* .mockup-img:hover {
-    transform: scale(1.1)
-} */
 
 .featured-work-container {
     overflow: hidden;
