--- a/src/components/githubActivity/githubActivity.css
+++ b/src/components/githubActivity/githubActivity.css
@@ -25,6 +25,6 @@
 .chart-img {
     min-width: 100%;
     min-height: 300px;
-    margin-left: -370px;
+    margin-left: -70px;
     position: relative;
 }
