--- a/src/components/workExperience/workExperience.css
+++ b/src/components/workExperience/workExperience.css
@@ -46,7 +46,6 @@
 }
 
 .job-date {
-    float: right;
 }
 
 .job-description {
